# slop-md2html

./: .gitignore  Makefile  README.md  feature-audit.md  makefile  md2html.json  md2html.spec  package-lock.json  package.json  pyproject.toml  readme.md
examples/: demo.md  md2html.json
examples/code/: hello.out  hello.py
examples/mathnote/: makefile  raysinglass-barebones.html  raysinglass-custom.html  raysinglass-super-barebones.html  raysinglass.html  raysinglass.md  readme.md
examples/mathnote/templates/: mathnote.css  mathnote.html
examples/rendered/: demo.html  sicp-example-ch3-2.rendered.html
examples/sicp-example/: index.md  makefile
examples/sicp-example/ch1/: notes-ch1-1.md  notes-ch1-2.md
examples/sicp-example/ch1/ch1-code/: _minimal.rkt  _test.rkt  ex1-10.out  ex1-11b.out  ex1-12.out  ex1-15.out  ex1-15.rkt  ex1-16.out  ex1-16.rkt  ex1-18.out  ex1-18a.out  ex1-19.out  ex1-2.out  ex1-20.out  ex1-21.rkt  ex1-22a.out  ex1-22a.rkt  ex1-23.out  ex1-24.out  ex1-27.out  ex1-27.rkt  ex1-28.out  ex1-29.out  ex1-30.out  ex1-31.out  ex1-32.out  ex1-33.out  ex1-34.out  ex1-35.out  ex1-35.rkt  ex1-36.out  ex1-37.out  ex1-38.out  ex1-39.out  ex1-40.out  ex1-40.rkt  ex1-41.rkt  ex1-43.out  ex1-44.out  ex1-45.out  (+7 more)
examples/sicp-example/jekyll/: _config.yml
examples/sicp-example/jekyll/_layouts/: post.html
examples/sicp-example/src/: index.md
examples/sicp-example/src/_layouts/: post.html
examples/sicp-full/: makefile
examples/sicp-full/src/: bonus-notes.md  index.md
md2html/: __init__.py  __main__.py  builder.py  cli.py  code.py  config.py  context.py  directives.py  errors.py  frontmatter.py  graph.py  highlighting.py  images.py  includes.py  markdown_engine.py  math.py  mathjax.py  paths.py  project.py  rendering.py  resources.py  scaffold.py  settings.py  slug.py  templates.py  toc.py  watch.py  worker.py
md2html/assets/: barebones.css  base.css  feature-code-box.css  feature-code-highlight.css  feature-code-output.css  feature-collapsible-code.css  feature-image.css  feature-inline-code.css  feature-math.css  feature-obsidian-image.css  feature-warning.css  page-base.css  page.css  super-barebones.css
md2html/default_templates/: barebones.html  jekyll.html  math-copy.html  page.html  super-barebones.html
md2html/scripts/: mathjax-chtml.mjs
md2html2/: __main__.py  cli.py  highlighting.py  mathjax.py  project.py  render.py  settings.py
md2html2/assets/: barebones.css  feature-code.css  feature-image.css  feature-math.css  feature-syntax.css  feature-toc.css  feature-warning.css  page-base.css  page.css
md2html2/default_templates/: barebones.html  page.html
md2html2/scripts/: mathjax-chtml.mjs  rouge.rb
tests/: test_md2html.py  test_md2html2.py
tools/: audit_gaussian.py
(+246 files in other folders)
