[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2html"
version = "0.1.2"
description = "Markdown page builder with math shielding, @toc, @include, Obsidian images, and executable code embeds."
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "md2html contributors" }]
dependencies = [
  "mistune>=3.0",
  "python-frontmatter>=1.1",
  "Pygments>=2.15",
  "PyYAML>=6.0",
  "Jinja2>=3.1",
  "watchdog>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pyinstaller>=6"]
build = ["pyinstaller>=6"]

[project.scripts]
md2html = "md2html.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["md2html*"]

[tool.setuptools.package-data]
md2html = ["assets/*.css", "default_templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
